# gardener_gopedia

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.phoenix.yml  pyproject.toml
.woodpecker/: ci.yml
alembic/: README.md
ci/: run.py
dataset/: sample_geneso_guide_100.json  sample_osteon_guide_30.json  sample_osteon_guide_30_v2.json  sample_osteon_guide_30_v3.json  template_level1_code_direct_fact_30.json  template_level1_markdown_direct_fact_30.json  universitas_analysis.json  universitas_eval_bronze.json  universitas_factual_v1.json  universitas_gopedia_neunexus.json
doc/: FINAL_REPORT.md  agent-dataset-qrel.md  agent-label-contract.md  ci-troubleshooting.md  improvement_plan.md  k8s-deployment.md  metrics_analysis.md  optimization_playbook.md  reproducible_eval.md  runbook.md  telegram-quality-test.md
doc/agent-reports/: agent-v1.1-2026-05-02.md
doc/guide/: install-guide.md  quick-install-guide.md
doc/rag-test-reports/: osteon-agent-v1.1-2026-05-02.md
gardener_gopedia/: __init__.py  agent_contract.py  cli.py  config.py  cost_tokens.py  curation_service.py  db.py  db_bootstrap.py  evaluation_service.py  gopedia_client.py  ingest_service.py  kpi_aggregate.py  kpi_service.py  langfuse_client.py  langfuse_export.py  main.py  metrics_engine.py  models.py  observability_contract.py  observability_payload.py  phoenix_adapter.py  phoenix_export.py  phoenix_payload.py  phoenix_rest.py  qrel_resolve_service.py  ragas_service.py  schemas.py  smoke.py
gardener_gopedia/core/: config.py  db.py  db_bootstrap.py  models.py
gardener_gopedia/curation/: agent_contract.py  reviews_router.py  router.py  service.py
gardener_gopedia/dataset/: persist.py  presets.py  router.py
gardener_gopedia/eval/: compare_router.py  metrics.py  qrel_resolve.py  router.py  service.py
gardener_gopedia/ingest/: router.py  service.py
sample_data/: example.json  example.jsonl  universitas_eval_README.md  universitas_eval_easy.json  universitas_eval_hard.json  universitas_eval_medium.json  universitas_eval_token_efficiency.json
scripts/: ingest_universitas.sh  init-db.sh  langfuse-docker-env.sh  langfuse-down.sh  langfuse-up.sh  phoenix-docker-env.sh  phoenix-down.sh  phoenix-up.sh  reset_gopedia_index.sh
streamlit_app/: app.py
tests/: conftest.py  test_curation.py  test_curation_api.py  test_eval_pipeline.py  test_evaluation_search.py  test_gopedia_client.py  test_health.py  test_metrics_engine.py  test_presets_and_eval_create.py  test_qrel_resolve.py  test_version_capture.py
(+13 files in other folders)
