[project]
name = "gardener-gopedia"
version = "0.1.0"
description = "Gopedia search quality evaluation service (MVP)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "ir-measures>=0.3.3",
    "ranx>=0.3.20",
    "streamlit>=1.40.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
eval = [
    "ragas>=0.4.0",
    "openai>=1.0.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]

[project.scripts]
gardener-api = "gardener_gopedia.cli:run_api"
gardener-smoke = "gardener_gopedia.smoke:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gardener_gopedia*"]

[tool.ruff]
line-length = 100
target-version = "py311"
